--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-context": "^0.0.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.6",
+    "react-places-autocomplete": "^7.3.0",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
