create admin page (#26)
* added google autocomplete locations for admin page

* added mui autocomplete for admin add location

* added .env for secret keys

* added location name input for add location form

* added lat and lng for location in db

* add location from frontend

* added snackbar for success/error add location

* added admin button in navbar

* added title for add location form

* added getAllUsers and editUserRole for admin

* added users table for admin

* removed warnings

* added tabs for admin page

* refactored admin components

* centered collumns for users table

* added protected route for admin page

* added fullWidth tabs for mobile

* handle edit user errors

* change error icon color

* remove console log

* change box width in users table

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^2.16.0",
-    "@emotion/react": "^11.10.4",
+    "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.4",
     "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
+    "@mui/x-data-grid": "^5.17.23",
     "@mui/x-date-pickers": "^5.0.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autosuggest-highlight": "^3.3.4",
     "axios": "^1.2.0",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
@@ -21,6 +23,7 @@
     "react-context": "^0.0.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.6",
+    "react-places-autocomplete": "^7.3.0",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
@@ -52,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
