--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.2.0",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
+    "google-map-react": "^2.2.0",
     "local-storage": "^2.0.0",
     "react": "^18.2.0",
     "react-context": "^0.0.3",
