--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.10.10",
     "@mui/x-data-grid": "^5.17.23",
     "@mui/x-date-pickers": "^5.0.10",
+    "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "axios": "^1.2.0",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
+    "google-map-react": "^2.2.0",
     "local-storage": "^2.0.0",
     "react": "^18.2.0",
     "react-context": "^0.0.3",
