--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
     "@types/express": "^4.17.14",
     "bcrypt": "^5.1.0",
     "class-validator": "^0.13.2",
+    "cloudinary": "^1.36.1",
     "cors": "^2.8.5",
     "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
